--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "url": "git@github.com:advanced-rest-client/anypoint-elements.git"
   },
   "dependencies": {
-    "anypoint-validator-behavior": "advanced-rest-client/anypoint-validator-behavior#^0.1.2"
+    "anypoint-validator-behavior": "advanced-rest-client/anypoint-validator-behavior#^0.1.2",
+    "anypoint-validatable-behavior": "advanced-rest-client/anypoint-validatable-behavior#^0.1.1"
   },
   "homepage": "https://github.com/advanced-rest-client/anypoint-elements",
   "authors": [
