--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "anypoint-validator-behavior": "advanced-rest-client/anypoint-validator-behavior#^0.1.2",
-    "anypoint-validatable-behavior": "advanced-rest-client/anypoint-validatable-behavior#^0.1.1"
+    "anypoint-validatable-behavior": "advanced-rest-client/anypoint-validatable-behavior#^0.1.1",
+    "anypoint-behaviors": "advanced-rest-client/anypoint-behaviors#^0.1.1"
   },
   "homepage": "https://github.com/advanced-rest-client/anypoint-elements",
   "authors": [
